# android-iperf

./: .dockerignore  .travis.yml  Dockerfile  LICENSE  README.md
iperf-2.0.10/: Android.mk
iperf-2.0.11/: Android.mk  configure.ac
iperf-2.0.12/: Android.mk  config.h  configure.ac
iperf-2.0.13/: Android.mk  config.h  configure.ac
iperf-2.0.5/: Android.mk
iperf-2.1.3/: Android.mk  configure.ac
iperf-2.1.4/: Android.mk  configure.ac
iperf-3.1.6/: Android.mk
iperf-3.1.7/: Android.mk
iperf-3.10/: Android.mk  fix.sh
iperf-3.10.1/: Android.mk  fix.sh
iperf-3.2/: Android.mk  fix.sh
iperf-3.2rc1/: Android.mk  fix.sh
iperf-3.3/: Android.mk  fix.sh
iperf-3.4/: Android.mk  fix.sh
iperf-3.5/: Android.mk  fix.sh
iperf-3.6/: Android.mk  fix.sh
iperf-3.7/: Android.mk  fix.sh  iperf_api.c
iperf-3.8/: Android.mk  fix.sh
iperf-3.8.1/: Android.mk  fix.sh
iperf-3.9/: Android.mk  fix.sh
jni/: Android.mk  Application.mk
libs/arm64-v8a/: iperf2.0.10  iperf2.0.11  iperf2.0.12  iperf2.0.13  iperf2.0.5  iperf2.1.3  iperf2.1.4  iperf3.1.6  iperf3.1.7  iperf3.10  iperf3.10.1  iperf3.2  iperf3.2rc1  iperf3.3  iperf3.4  iperf3.5  iperf3.6  iperf3.7  iperf3.8  iperf3.8.1  iperf3.9
libs/armeabi-v7a/: iperf2.0.10  iperf2.0.11  iperf2.0.12  iperf2.0.13  iperf2.0.5  iperf2.1.3  iperf2.1.4  iperf3.1.6  iperf3.1.7  iperf3.10  iperf3.10.1  iperf3.2  iperf3.2rc1  iperf3.3  iperf3.4  iperf3.5  iperf3.6  iperf3.7  iperf3.8  iperf3.8.1  iperf3.9
libs/x86/: iperf2.0.10  iperf2.0.11  iperf2.0.12  iperf2.0.13  iperf2.0.5  iperf2.1.3  iperf2.1.4  iperf3.1.6  iperf3.1.7  iperf3.10  iperf3.10.1  iperf3.2  iperf3.2rc1  iperf3.3  iperf3.4  iperf3.5  iperf3.6  iperf3.7  iperf3.8  iperf3.8.1  iperf3.9
libs/x86_64/: iperf2.0.10  iperf2.0.11  iperf2.0.12  iperf2.0.13  iperf2.0.5  iperf2.1.3  iperf2.1.4  iperf3.1.6  iperf3.1.7  iperf3.10  iperf3.10.1  iperf3.2  iperf3.2rc1  iperf3.3  iperf3.4  iperf3.5  iperf3.6  iperf3.7  iperf3.8  iperf3.8.1  iperf3.9
